--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
         <section id="intro" class="about">
             <h2>About</h2>
             <hr>
-            <p>Hello! My name is Gustavo. Welcome to my Portfolio</p>
+            <p>Hello! My name is Gustavo. Welcome to my Portfolio
+                <br> Hello, my name is Gustavo Gabaldon, and I am a third-year Computer Science student at the 
+                University of Florida. I am pursuing an Artificial Intelligence certificate as well as a minor 
+                in Business administration. My passion lies in combining both technical skills with business strategy 
+                to drive impactful solutions.
+            </p>
+            
         </section>>
         <section id="education" class="education">
             <h2>Education</h2>
